[project]
name = "activity-tools"
version = "0.0.7"
description = "ActivityPub building blocks for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"

authors = [
  {email = "pypi+activity-tools@enesge.eu"},
  {name = "Stefan Berggren"}
]

maintainers = [
  {email = "pypi+activity-tools@enesge.eu"},
  {name = "Stefan Berggren"}
]

dependencies = [
    "cryptography >= 39.0.0",
    "requests >= 2.28.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/nsg/activity-tools"
documentation = "https://github.com/nsg/activity-tools"
repository = "https://github.com/nsg/activity-tools.git"
changelog = "https://github.com/nsg/activity-tools/blob/master/CHANGELOG.md"
